Added a guide for Romania
Balanced Howitzer battalions
Fixed Galician decisions for Austria not showing up
Made Hungary sell surplus to Austria using market
Austria AI balance between Russian, Serbian and Italian fronts
Improvements in French soc-dem tree
Fixed size for naval technologies window
Fixed wrong localisation for Austria due to the split
Failed Kornilov Putsch will retire him and add a new general