@@ -834,7 +834,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_count_our_pennies
-		icon = GFX_goal_generic_intelligence_exchange
+		icon = GFX_focus_generic_money_deal
 		cost = 5
 		x = 3
 		y = 1
@@ -846,6 +846,9 @@ focus_tree = {
 			NOT = {
 				has_idea = ROM_balance_budget
 			}
+		}
+		bypass = {
+			has_idea = ROM_balance_budget
 		}
 		prerequisite = {
 			focus = ROM_a_man_from_junimea
@@ -867,7 +870,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_encourage_political_activism
-		icon = GFX_goal_generic_intelligence_exchange
+		icon = GFX_focus_generic_workers
 		cost = 5
 		x = 3
 		y = 2
@@ -894,7 +897,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_de_centralize_the_economy
-		icon = GFX_goal_generic_intelligence_exchange
+		icon = GFX_focus_generic_economic_recovery
 		cost = 5
 		x = 3
 		y = 4
@@ -927,7 +930,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_improve_the_urban_life
-		icon = GFX_goal_generic_intelligence_exchange
+		icon = GFX_goal_generic_construct_civilian
 		cost = 5
 		x = 2
 		y = 5
@@ -936,6 +939,7 @@ focus_tree = {
 				character = ROM_constantin_arion
 				ruling_only = yes
 			}
+			owns_state = 805
 		}
 		prerequisite = {
 			focus = ROM_de_centralize_the_economy
@@ -945,7 +949,8 @@ focus_tree = {
 			805 = {
 				increase_state_category = yes
 			}
-			46 = {
+			random_owned_controlled_state = {
+				prioritize = { 46 }
 				add_building_construction = {
 					type = infrastructure
 					level = 1
@@ -2599,7 +2604,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_special_privileges
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_focus_eng_concessions_to_the_trade_unions
 		cost = 5
 		x = 0
 		y = 3
@@ -2622,7 +2627,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_increase_security
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_focus_generic_national_security
 		cost = 5
 		x = 0
 		y = 4
@@ -2651,7 +2656,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_break_the_pnl
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_focus_generic_strike_at_democracy2
 		cost = 5
 		x = 1
 		y = 5
@@ -2677,7 +2682,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_encourage_political_apathy
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_goal_generic_neutrality_focus
 		cost = 5
 		x = -1
 		y = 5
@@ -2706,7 +2711,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_opium_of_the_masses
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_focus_china_opium_monopoly
 		cost = 5
 		x = 2
 		y = 3
@@ -2741,7 +2746,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_quid_pro_quo_with_junimea
-		icon = GFX_focus_generic_home_defense
+		icon = GFX_focus_generic_printing_press
 		cost = 5
 		x = -2
 		y = 3
@@ -2829,7 +2834,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_controll_the_media
-		icon = GFX_focus_generic_monarchy_2
+		icon = GFX_goal_generic_news
 		cost = 5
 		x = 1
 		y = 1
@@ -3035,7 +3040,7 @@ focus_tree = {
 			ROM_king_effect = yes
 		}
 		ai_will_do = {
-			factor = 3
+			base = -10
 		}
 		search_filters = {
 			FOCUS_FILTER_INTERNAL_AFFAIRS
@@ -3043,7 +3048,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_fable_and_truth
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_focus_GER_romanian_pact
 		cost = 5
 		x = 1
 		y = 6
@@ -3081,7 +3086,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_eliminate_foreign_tariffs
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_bag_of_money
 		cost = 5
 		x = 2
 		y = 7
@@ -3112,7 +3117,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_new_rural_schools
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_generic_education_learning
 		cost = 5
 		x = 1
 		y = 8
@@ -3131,6 +3136,10 @@ focus_tree = {
 				remove_idea = ROM_research_investments
 				add_idea = ROM_research_investments2
 			}
+			random_owned_controlled_state = {
+				prioritize = { 79 805 }
+				add_extra_state_shared_building_slots = 1
+			}
 		}
 		ai_will_do = {
 			factor = 3
@@ -3141,7 +3150,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_sell_public_land_to_peasants
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_focus_generic_land_reclamation
 		cost = 5
 		x = -1
 		y = 6
@@ -3167,7 +3176,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_redefine_conservatism
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_focus_rom_preserve_romania
 		cost = 5
 		x = -2
 		y = 7
@@ -3193,7 +3202,7 @@ focus_tree = {
 	}
 	focus = {
 		id = ROM_reject_excesses_of_society
-		icon = GFX_goal_tfv_strengthen_commonwealth_ties
+		icon = GFX_focus_generic_agricultural_subsidies
 		cost = 5
 		x = 0
 		y = 7
