@@ -5334,16 +5334,29 @@ country_event = {
 	}
 }
 
+# German Event
 country_event = {
 	id = ww1_romania.167
 	title = ww1_romania.167.t
 	desc = ww1_romania.167.d
 	is_triggered_only = yes
+	picture = GFX_report_event_generic_sign_treaty2
 	option = {
 		#yes
 		name = ww1_romania.167.a
 		ROM = {
 			country_event = ww1_romania.168
+		}
+		ai_chance = {
+			base = 20
+			modifier = {
+				add = -400
+				ROM = {
+					NOT = {
+						is_in_faction_with = GER
+					}
+				}
+			}
 		}
 	}
 	option = {
@@ -5351,6 +5364,9 @@ country_event = {
 		name = ww1_romania.167.b
 		ROM = {
 			country_event = ww1_romania.169
+		}
+		ai_chance = {
+			base = 1
 		}
 	}
 }
@@ -5360,6 +5376,7 @@ country_event = {
 	title = ww1_romania.168.t
 	desc = ww1_romania.168.d
 	is_triggered_only = yes
+	picture = GFX_report_event_generic_sign_treaty1
 	option = {
 		name = ww1_romania.168.a
 		BUL = {
@@ -5372,6 +5389,7 @@ country_event = {
 	id = ww1_romania.169
 	title = ww1_romania.169.t
 	desc = ww1_romania.169.d
+	picture = GFX_report_event_gathering_protest
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.169.a
@@ -5383,6 +5401,7 @@ country_event = {
 	id = ww1_romania.170
 	title = ww1_romania.170.t
 	desc = ww1_romania.170.d
+	picture = GFX_report_event_generic_sign_treaty3
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.170.a
@@ -5400,6 +5419,7 @@ country_event = {
 	id = ww1_romania.171
 	title = ww1_romania.171.t
 	desc = ww1_romania.171.d
+	picture = GFX_report_event_generic_sign_treaty3
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.171.a
@@ -5412,6 +5432,7 @@ country_event = {
 	id = ww1_romania.172
 	title = ww1_romania.172.t
 	desc = ww1_romania.172.d
+	picture = GFX_report_event_romania_parliament
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.172.a
@@ -5424,6 +5445,7 @@ country_event = {
 	id = ww1_romania.173
 	title = ww1_romania.173.t
 	desc = ww1_romania.173.d
+	picture = GFX_report_event_gathering_protest
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.173.a
@@ -5527,6 +5549,7 @@ country_event = {
 	id = ww1_romania.176
 	title = ww1_romania.176.t
 	desc = ww1_romania.176.d
+	picture = GFX_report_event_riot_police_poland
 	is_triggered_only = yes
 	option = {
 		name = ww1_romania.176.a
@@ -5541,6 +5564,7 @@ country_event = {
 	id = ww1_romania.177
 	title = ww1_romania.177.t
 	desc = ww1_romania.177.d
+	picture = GFX_report_event_romania_parliament
 	trigger = {
 		has_completed_focus = ROM_entrench_the_aristocracy
 		has_global_flag = ROM_ferd_king
@@ -5551,13 +5575,17 @@ country_event = {
 		uncomplete_national_focus = {
 			focus = ROM_entrench_the_aristocracy
 		}
-		country_event = ww1_romania.18
+		country_event = {
+			id = ww1_romania.18
+			hours = 6
+		}
 	}
 }
 country_event = {
 	id = ww1_romania.178
 	title = ww1_romania.178.t
 	desc = ww1_romania.178.d
+	picture = GFX_report_event_generic_riot
 	is_triggered_only = yes
 	fire_only_once = yes
 	option = {
