@@ -201,8 +201,8 @@ modernizer: "Modernizer"
 ROM_in_the_hall_of_the_mountain_king: "In the Hall of the Mountain King"
 ROM_in_the_hall_of_the_mountain_king_desc: "The world is slowly burning around us. Everyone knows Europe will explode into war at any time, and its crucial Romania has good leadership to wheather the storm, as its most likely we will be involved some way or another whether we like it or not. Thus, we must make an appeal to the king to end the system of party rotation and allow us mandate for the foreseeable future."
 ROM_battle_for_the_soul_of_the_nation:0 "Battle for the Soul of the Nation"
-ww1_romania.172.t: "A Meeting in Bucharest"
-ww1_romania.172.d: "After meeting with the crown council in Bucharest, Maiorescu has sucessfully convinced the king of the importance of a stable, non rotating government. While the king had his concerns and demands, he ultimately agreed with Maiorescu's reasoning. With this, we can look towards using our mandate to push moderate conservative."
+ww1_romania.172.t: "A Meeting in Bucuresti"
+ww1_romania.172.d: "After meeting with the crown council in Bucuresti, Maiorescu has sucessfully convinced the king of the importance of a stable, non rotating government. While the king had his concerns and demands, he ultimately agreed with Maiorescu's reasoning. With this, we can look towards using our mandate to push moderate conservative."
 ww1_romania.172.a: "Great!"
 disable_halve_parliment: "§RDIsables§! National Focus:§Y Halve Parliaments Seats§!'"
 ROM_no_take_halve: "Has promised King that we won't pursue this policy"
@@ -871,6 +871,43 @@ ROM_reopen_the_steel_industry: "Reopen the Steel Industry"
 ROM_reopen_the_steel_industry_desc: "During the Great War, our steel industry had suffered greatly due to falling employment from conscription and damage to the infrastructure from our enemies. We must prioritise our efforts on getting the steel mills working again as it is one of, if not the most important industrial need for our nation."
 ROM_develop_the_agriculture: "Revive the Agriculture"
 ROM_develop_the_agriculture_desc: "After the Great War, our agricultural production was completly destroyed, as the men who worked the farms were conscripted. With this massive decrease in agricultural production, we have went from one of the top exporters of grain before the war, to becoming an importer of grain. We must save our desperate farmers, quickly."
+ROM_fable_and_truth: "Fable and Truth"
+ROM_fable_and_truth_desc: ""
+ROM_eliminate_foreign_tariffs: "Eliminate Foreign Tariffs"
+ROM_eliminate_foreign_tariffs_desc: ""
+ROM_new_rural_schools: "New Rural Schools"
+ROM_new_rural_schools_desc: ""
+ROM_sell_public_land_to_peasants: "Sell Public Land to Peasants"
+ROM_sell_public_land_to_peasants_desc: ""
+ROM_redefine_conservatism: "Redefine Conservatism"
+ROM_redefine_conservatism_desc: ""
+ROM_reject_excesses_of_society: "Reject the Excesses of Society"
+ROM_reject_excesses_of_society_desc: ""
+ROM_special_privileges: "Special Privileges"
+ROM_special_privileges_desc: ""
+ROM_increase_security: "Increase Security"
+ROM_increase_security_desc: ""
+ROM_break_the_pnl: "Break the PNL"
+ROM_break_the_pnl_desc: ""
+ROM_encourage_political_apathy: "Encourage Political Apathy"
+ROM_encourage_political_apathy_desc: ""
+ROM_opium_of_the_masses: "Opium of the Masses"
+ROM_opium_of_the_masses_desc: ""
+ROM_quid_pro_quo_with_junimea: "Quid Pro Quo with the Junimea"
+ROM_quid_pro_quo_with_junimea_desc: ""
+ROM_controll_the_media: "Control the Media"
+ROM_controll_the_media_desc: ""
+ROM_count_our_pennies: "Count our Pennies"
+ROM_count_our_pennies_desc: ""
+ROM_encourage_political_activism: "Encourage Political Activism"
+ROM_encourage_political_activism_desc: ""
+ROM_de_centralize_the_economy: "Decentralize the Economy"
+ROM_de_centralize_the_economy_desc: ""
+ROM_improve_the_urban_life: "Improve the Urban Life"
+ROM_improve_the_urban_life_desc: ""
+
+
+
 
 ## FOCUS_END
 
