@@ -1,3 +1,4 @@
+Added Extended Versions of the Romanian conservative paths
 Added a guide for Romania
 Balanced Howitzer battalions
 Fixed Galician decisions for Austria not showing up
